fixed mobile header spacing

--- a/content/themes/cjs-ghost/assets/sass/style.scss
+++ b/content/themes/cjs-ghost/assets/sass/style.scss
@@ -627,6 +627,10 @@ pre ol li {
 	height: 48px;
 	overflow: auto;
 
+} .mobile-title-spacer {
+  width: auto;
+  height: 105px;
+  overflow: auto;
 
 /** --  Page Body :: Post List --  **/
 
